AWS/Terraform/EKS/awx/k8s/deployment-awx-operator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awx-operator
  namespace: awx
  labels:
    app: awx-operator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awx-operator
  template:
    metadata:
      labels:
        app: awx-operator
    spec:
      tolerations:
        - key: "eks.amazonaws.com/compute-type"
          operator: "Equal"
          value: "fargate"
          effect: "NoSchedule"
      containers:
        - name: awx-operator
          image: quay.io/ansible/awx-operator:2.19.1
          resources:
            requests:
              cpu: "2"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
