AWS/Terraform/EKS/awx/k8s/deployment-awx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awx
  namespace: awx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awx
  template:
    metadata:
      labels:
        app: awx
    spec:
      tolerations:
        - key: "eks.amazonaws.com/compute-type"
          operator: "Equal"
          value: "fargate"
          effect: "NoSchedule"
      containers:
        - name: awx
          image: quay.io/ansible/awx:19.3.0
          resources:
            requests:
              cpu: "2"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
