AWS/Terraform/EKS/awx/k8s/statefulset-postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: awx-postgres
  namespace: awx
spec:
  serviceName: "awx-postgres"
  replicas: 2
  selector:
    matchLabels:
      app: awx-postgres
  template:
    metadata:
      labels:
        app: awx-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2 # Explicitly set StorageClass
        resources:
          requests:
            storage: 8Gi
