AWS/Terraform/EKS/awx/k8s/statefulset-redis.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: awx-redis
  namespace: awx
spec:
  serviceName: "awx-redis"
  replicas: 2
  selector:
    matchLabels:
      app: awx-redis
  template:
    metadata:
      labels:
        app: awx-redis
    spec:
      containers:
        - name: redis
          image: redis:6
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 2Gi
