AWS/Terraform/EKS/awx/k8s/service-awx.yml
apiVersion: v1
kind: Service
metadata:
  name: awx-service
  namespace: awx
spec:
  selector:
    app: awx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8052
