AWS/Terraform/EKS/awx/k8s/service-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: awx-postgres
  namespace: awx
spec:
  selector:
    app: awx-postgres
  ports:
    - protocol: TCP
      port: 5432
