AWS/Terraform/EKS/awx/k8s/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: awx-redis-master
  namespace: awx
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: awx-redis
  clusterIP: None
